feat: adding assets, updating image styling, removing link setTimeouts for now, removing EmployerHistory links for now, and building out Contact page

--- a/src/components/EmployerHistory/EmployerProjectHistory.astro
+++ b/src/components/EmployerHistory/EmployerProjectHistory.astro
@@ -134,9 +134,9 @@ if (toDate) {
 						);
 
 						// Mock for doing actual analytics work
-						setTimeout(() => {
-							window.location.href = (targetElement as HTMLAnchorElement).href;
-						}, 500);
+						// setTimeout(() => {
+						window.location.href = (targetElement as HTMLAnchorElement).href;
+						// }, 500);
 					}
 				};
 
