--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -75,9 +75,9 @@ const {
 			// TODO: Add analytics
 			console.log('log analytics for contact cta');
 			// Mock for doing actual analytics work
-			setTimeout(() => {
-				window.location.href = contactMeButtonLinkElement.href;
-			}, 500);
+			// setTimeout(() => {
+			window.location.href = contactMeButtonLinkElement.href;
+			// }, 500);
 		};
 
 		// TODO: Add events for touch/keyboard events
