--- a/src/components/LeftNav.astro
+++ b/src/components/LeftNav.astro
@@ -91,6 +91,7 @@ const {links, selectedLinkByPath} = linksMetadata;
 
 		&__item {
 			margin-bottom: 10px;
+			margin-left: 0;
 
 			&:last-of-type {
 				margin-bottom: 0;
