--- a/src/components/ResumeSummaryCard.astro
+++ b/src/components/ResumeSummaryCard.astro
@@ -1,6 +1,6 @@
 ---
 import {Image} from 'astro:assets';
-import CoryLarcadeImage from '../images/Cory-Larcade.jpg';
+import CoryLarcadeImage from '../images/Cory-Larcade.png';
 import SideBySideCard from './SideBySideCard.astro';
 ---
 
@@ -52,12 +52,17 @@ import SideBySideCard from './SideBySideCard.astro';
 	.resume-summary-card {
 		&__left-content {
 			// TODO: Find background image to use
-			background-color: orange;
+			// background-color: orange;
+			// background: url('../images/pattern-hexagon.png') repeat;
+			// background: url('../images/pattern-waves.png') repeat;
+			background: url('../images/pattern-herringbone.png') repeat;
+			background-size: contain;
 			display: flex;
 			justify-content: center;
 		}
 		&__image-container {
-			background-color: orange;
+			// background: url('../images/pattern-hexagon.png') repeat;
+			// background-color: orange;
 			// width: 100%;
 			// height: 100%;
 			// width: 300px;
