--- a/src/components/SkillsCard.astro
+++ b/src/components/SkillsCard.astro
@@ -37,7 +37,7 @@ const {
 			<div class='skills-card__image-container'>
 				<Image
 					src={img as any}
-					width='300'
+					width='600'
 					height='400'
 					format='webp'
 					alt={imgAltText}
@@ -81,10 +81,10 @@ const {
 			justify-content: center;
 		}
 		&__image-container {
-			// width: 100%;
-			// height: 100%;
-			// width: 300px;
-			// height: 416px;
+			img {
+				width: 100%;
+				height: 100%;
+			}
 		}
 
 		&__content {
