--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,10 @@ const mainNavigationLinksMetadata: MainNavigationLinksMetadata = {
 			label: 'Resume',
 			link: '/',
 		},
-		{
-			label: 'Projects',
-			link: '/projects',
-		},
+		// {
+		// 	label: 'Projects',
+		// 	link: '/projects',
+		// },
 		{
 			label: 'Contact',
 			link: '/contact',
@@ -209,6 +209,8 @@ const subtitleItemList = [
 		}
 
 		&__profile-pic-container {
+			background: url('../images/pattern-herringbone.png') repeat;
+			background-size: contain;
 			display: flex;
 			justify-content: center;
 			margin-top: 20px;
