feat: increasing page title for Contact page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -69,7 +69,7 @@ const headerMetadata: HeaderMetadata = {
 		max-width: 600px;
 		
 		&__page-title {
-			font-size: typography.$mobile-font-size--L;
+			font-size: typography.$mobile-font-size--XL;
 			margin-top: 40px;
 			text-align: center;
 		}
