feat: adding desktop breakpoint styling, links in the header for desktop, link styling, button styling, updated Header grid styling and items, and hiding Projects pages for now

--- a/src/components/EducationHistory.astro
+++ b/src/components/EducationHistory.astro
@@ -283,12 +283,19 @@ if (educationToDate) {
 			}
 
 			&__link {
-				color: var(--blue-50);
-				text-decoration: solid;
+				color: var(--blue-100);
+				text-decoration: underline;
 
-				&:hover,
 				&:active {
-					color: var(--blue-150);
+					color: var(--red-0);
+				}
+
+				:global(.dark-mode) & {
+					color: var(--blue-0);
+
+					&:active {
+						color: var(--red-0);
+					}
 				}
 			}
 		}
