--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -160,6 +160,10 @@ const subtitleItemList = [
 		&__section {
 			margin-top: 40px;
 
+			&:first-of-type {
+				margin-top: 0;
+			}
+
 			&__title {
 				font-size: typography.$mobile-font-size--L;
 				text-align: center;
