--- a/src/components/SkillsCard.astro
+++ b/src/components/SkillsCard.astro
@@ -38,7 +38,7 @@ const {
 				<Image
 					src={img as any}
 					width='600'
-					height='400'
+					height='600'
 					format='webp'
 					alt={imgAltText}
 				/>
@@ -70,20 +70,25 @@ const {
 </div>
 
 <style lang='scss'>
+
+	@use '../styles/breakpoints';
 	@use '../styles/colors';
 	@use '../styles/typography';
 
 	.skills-card {
 		&__left-content {
 			// TODO: Find background image to use
-			background-color: orange;
+			background-color: #dddddd;
 			display: flex;
 			justify-content: center;
 		}
+
 		&__image-container {
 			img {
 				width: 100%;
 				height: 100%;
+				max-width: 600px;
+				max-height: 400px;
 			}
 		}
 
@@ -117,4 +122,23 @@ const {
 			&__list-item {}
 		}
 	}
+
+	@media screen and (min-width: breakpoints.$breakpoint--1025) {
+		.skills-card {
+			&__image-container {
+				img {
+					width: 100%;
+					height: 100%;
+					max-width: 400px;
+					max-height: 500px;
+				}
+			}
+
+			&__content {
+				margin-top: 0;
+				padding: 20px;
+			}
+		}
+	}
+
 </style>
