--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -19,7 +19,7 @@ body {
 /* 5. Improve media defaults */
 img, picture, video, canvas, svg {
   display: block;
-  max-width: 100%;
+  // max-width: 100%;
 }
 /* 6. Inherit fonts for form controls */
 input, button, textarea, select {
