--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -16,6 +16,7 @@ $mobile-list-item-line-height: 30px;
 //// Desktop
 
 //  Font sizes
+$desktop-font-size--S: 16px;
 $desktop-font-size--M: 20px;
 $desktop-font-size--ML: 24px;
 $desktop-font-size--L: 30px;
