--- a/src/components/EmployerHistory/EmployerHistory.astro
+++ b/src/components/EmployerHistory/EmployerHistory.astro
@@ -59,28 +59,39 @@ const contentContainerId = `content-container-${id}`;
 	>
 	<section class='employer-history'>
 		<div class='employer-history__title-section'>
-			<Button
-				id={collapseButtonId}
-				type='quiet'
-				class='employer-history__title-button'
-			>
-				<div class='employer-history__title-container'>
-					{icon && (
-						<div class='employer-history__logo-container'>
-							<Icon icon={icon} />
+			<!-- Spacer -->
+			<div></div>
+
+			<div class='employer-history__title-section__title-button-container'>
+				<Button
+					id={collapseButtonId}
+					type='quiet'
+					class='employer-history__title-button'
+				>
+					<div class='employer-history__title-container'>
+						{icon && (
+							<div class='employer-history__logo-container'>
+								<Icon icon={icon} />
+							</div>
+						)}
+	
+						<h3 class='employer-history__company-name'>{companyName}</h3>
+	
+						<div
+							class='employer-history__down-chevron-container'
+							id={downChevronContainerId}
+						>
+							<Icon icon='down-chevron' />
 						</div>
-					)}
-
-					<h3 class='employer-history__company-name'>{companyName}</h3>
-
-					<div
-						class='employer-history__down-chevron-container'
-						id={downChevronContainerId}
-					>
-						<Icon icon='down-chevron' />
 					</div>
+				</Button>
+			</div>
+
+			<div class='employer-history__title-section__timeframe'>
+				<div class='employer-history__title-section__timeframe-contents'>
+					{companyFromDate} - {companyToDate}
 				</div>
-			</Button>
+			</div>
 		</div>
 
 		<div
@@ -156,11 +167,25 @@ const contentContainerId = `content-container-${id}`;
 
 <style lang='scss'>
 
+	@use '../../styles/breakpoints.scss';
+	@use '../../styles/typography.scss';
+
 	.employer-history {
 		&__title-section {
-			display: flex;
-			justify-content: center;
-			align-items: center;
+			display: grid;
+			grid-template-columns: 1fr;
+			// grid-template-columns: auto 1fr auto;
+			grid-template-rows: 1fr;
+
+			&__title-button-container {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+
+			&__timeframe {
+				display: none;
+			}
 		}
 
 		&__title-container {
@@ -187,8 +212,7 @@ const contentContainerId = `content-container-${id}`;
 		}
 
 		&__down-chevron-container {
-			position: absolute;
-			right: -19px;
+			margin-left: 5px;
 			transform: rotate(180deg);
 
 			&--rotate {
@@ -196,6 +220,9 @@ const contentContainerId = `content-container-${id}`;
 			}
 
 			:global(svg) {
+				height: 15px;
+				width: 15px;
+
 				:global(path) {
 					fill: var(--gray-0);
 				}
@@ -245,6 +272,37 @@ const contentContainerId = `content-container-${id}`;
 		justify-content: center;
 		padding: 10px;
 		max-width: 260px;
+	}
+
+	@media screen and (min-width: breakpoints.$breakpoint--1025) {
+		.employer-history {
+			&__company-name {
+				font-size: typography.$desktop-font-size--ML;
+			}
+
+			&__timeframe {
+				display: none;
+			}
+
+			&__title-section {
+				// grid-template-columns: 210px 2fr 210px;
+				// grid-template-columns: max-content 1fr auto;
+				grid-template-columns: 1fr 1fr auto;
+				gap: 20px;
+
+				&__timeframe {
+					align-items: center;
+					display: flex;
+					justify-content: flex-end;
+				}
+			}
+			&__down-chevron-container {
+				:global(svg) {
+					height: 20px;
+					width: 20px;
+				}
+			}
+		}
 	}
 
 </style>
