--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,12 +38,24 @@ svg {
 	width: 100%;
 }
 
+body {
+	font-size: typography.$mobile-font-size--M;
+}
+
 main {
 	min-height: globalPageStyling.$page-main-content-height--mobile;
 }
 
 @media screen and (min-width: breakpoints.$breakpoint--1025) {
+	body {
+		font-size: typography.$desktop-font-size--ML;
+	}
+
 	main {
 		min-height: globalPageStyling.$page-main-content-height--desktop;
+	}
+
+	li {
+		line-height: typography.$desktop-list-item-line-height;
 	}
 }
