feat: adding cursor pointer to buttons and links, updating alt text for skills images, and eager loading above-the-fold image for loading perforamnce

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,6 +68,7 @@ const subtitleItemList = [
 						height='416'
 						format='webp'
 						alt='Cory Larcade wearing a hat'
+						loading="eager"
 					/>
 				</div>
 			</div>
