--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,7 @@
 button {
 	border: none;
 	background-color: transparent;
+	cursor: pointer;
 }
 
 .visually-hidden {
@@ -29,6 +30,7 @@ li {
 }
 
 a {
+	cursor: pointer;
 	text-decoration: none;
 }
 
