--- a/src/components/EmployerHistory/EmployerProjectHistory.astro
+++ b/src/components/EmployerHistory/EmployerProjectHistory.astro
@@ -5,6 +5,7 @@ import Icon from '../Icon.astro';
 export interface EmployerProjectMetadata {
 	id: string;
 	name: string;
+	shortName?: string;
 	link?: string;
 	icon?: string;
 	fromDate?: number;
