--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,10 +12,10 @@ const mainNavigationLinksMetadata: MainNavigationLinksMetadata = {
 			label: 'Resume',
 			link: '/',
 		},
-		// {
-		// 	label: 'Projects',
-		// 	link: '/projects',
-		// },
+		{
+			label: 'Projects',
+			link: '/projects',
+		},
 		{
 			label: 'Contact',
 			link: '/contact',
@@ -90,15 +90,6 @@ const headerMetadata: HeaderMetadata = {
 			margin-top: 20px;
 		}
 
-		&__link {
-			color: var(--blue-50);
-			text-decoration: solid;
-
-			&:hover,
-			&:active {
-				color: var(--blue-150);
-			}
-		}
 	}
 
 	// @media screen and (min-width: breakpoints.$breakpoint--1025) {
