--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,10 @@ const mainNavigationLinksMetadata: MainNavigationLinksMetadata = {
 			label: 'Resume',
 			link: '/',
 		},
-		// {
-		// 	label: 'Projects',
-		// 	link: '/projects',
-		// },
+		{
+			label: 'Projects',
+			link: '/projects',
+		},
 		{
 			label: 'Contact',
 			link: '/contact',
