--- a/src/components/LeftNav.astro
+++ b/src/components/LeftNav.astro
@@ -99,12 +99,13 @@ const {links, selectedLinkByPath} = linksMetadata;
 		}
 
 		&__link {
-			display: flex;
 			align-items: center;
 			border-radius: 10px;
-			padding: 10px;
 			cursor: pointer;
 			color: var(--gray-0);
+			display: flex;
+			padding: 10px;
+			text-decoration: none;
 
 			&--selected,
 			&:hover {
