--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -2,6 +2,7 @@
 
 import SiteLayout from '../../layouts/SiteLayout.astro';
 import {type MainNavigationLinksMetadata} from '../../types/MainNavigationLinkTypes';
+import {adobeWorkHistory} from '../../data/employerHistory-data';
 
 const mainNavigationLinksMetadata: MainNavigationLinksMetadata = {
 	links: [
@@ -9,10 +10,10 @@ const mainNavigationLinksMetadata: MainNavigationLinksMetadata = {
 			label: 'Resume',
 			link: '/',
 		},
-		// {
-		// 	label: 'Projects',
-		// 	link: '/projects',
-		// },
+		{
+			label: 'Projects',
+			link: '/projects',
+		},
 		{
 			label: 'Contact',
 			link: '/contact',
@@ -23,11 +24,99 @@ const mainNavigationLinksMetadata: MainNavigationLinksMetadata = {
 ---
 
 <SiteLayout
-	title='Cory Larcade Projects'
+	title="Cory Larcade's Projects"
 	mainNavigationMetadata={mainNavigationLinksMetadata}
 >
-	<main>
-		<h1>Cory Larcade Projects</h1>
-		<div>Projects here</div>
+	<main class='projects'>
+		<h1 class='projects__page-title'>Projects</h1>
+		<section class='projects__work-projects'>
+			<h2 class='projects__work-projects__title'>Work Projects</h2>
+			<p class='projects__work-projects__sub-title'>These are projects I've worked on for previous/current employers.</p>
+			<div class='projects__cards'>
+				{adobeWorkHistory.projects.map(project => {
+					if (!project.link) {
+						return null;
+					}
+
+					return (
+						<a
+							id='work-adobe-project'
+							href={project.link}
+							class='projects__project-card'
+						>
+							<div class='projects__project-card__company-name'>{adobeWorkHistory.companyName}</div>
+							<div class='projects__project-card__project-name'>{project.shortName}</div>
+						</a>
+					);
+				})}
+			</div>
+</section>
 	</main>
 </SiteLayout>
+
+<style lang='scss'>
+
+	@use '../../styles/breakpoints.scss';
+	@use '../../styles/colors.scss';
+	@use '../../styles/typography.scss';
+
+	.projects {
+		margin: 0 10px;
+
+		&__cards {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+			grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+			gap: 20px;
+			margin-top: 20px;
+		}
+
+		&__project-card {
+			background-color: #E0E0E0;
+			border: 1px solid;
+			border-color: colors.$black;
+			border-radius: 10px;
+			color: colors.$black;
+			display: flex;
+			flex-direction: column;
+			height: 200px;
+			justify-content: center;
+			align-items: center;
+			padding: 20px;
+			text-decoration: none;
+
+			&__company-name {
+				font-size: typography.$mobile-font-size--L;
+				font-weight: 700;
+				margin-bottom: 20px;
+			}
+
+			&__project-name {
+				font-size: typography.$mobile-font-size--ML;
+				text-align: center;
+				text-wrap: pretty;
+			}
+		}
+
+		&__page-title {
+			font-size: typography.$mobile-font-size--XL;
+			font-weight: 700;
+		}
+
+		&__work-projects {
+			margin-top: 40px;
+
+			&__title {
+				display: flex;
+				font-size: typography.$mobile-font-size--L;
+				font-weight: 700;
+				justify-content: center;
+			}
+
+			&__sub-title {
+				margin-top: 20px;
+			}
+		}
+	}
+
+</style>
