--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -65,7 +65,7 @@ const mainNavigationLinksMetadata: MainNavigationLinksMetadata = {
 
 		&__cards {
 			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+			grid-template-columns: repeat(auto-fit, 250px);
 			grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
 			gap: 20px;
 			margin-top: 20px;
