feat: only show underline for selected header nav link, updated LeftNav to allow users to click selected links so it'll work from Project pages, adding content and styling to learn-on-the-web.astro page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -233,6 +233,7 @@ const {
 				&__link {
 					color: var(--blue-100);
 					font-size: typography.$desktop-font-size--ML;
+					text-decoration: none;
 
 					&--selected {
 						font-weight: 700;
