--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -281,7 +281,7 @@ const subtitleItemList = [
 
 			&__subtitle {
 				&__text {
-					font-size: typography.$desktop-font-size--M;
+					font-size: typography.$desktop-font-size--S;
 				}
 			}
 		}
