--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -63,7 +63,7 @@ main {
 
 @media screen and (min-width: breakpoints.$breakpoint--1025) {
 	body {
-		font-size: typography.$desktop-font-size--ML;
+		font-size: typography.$desktop-font-size--M;
 	}
 
 	main {
